# BreakoutGame

./: CMakeLists.txt
Breakout/src/: main.cpp
Breakout/src/Core/: application.cpp  application.h  window.h
Breakout/src/Platform/Linux/GLFW/: window_glfw.cpp  window_glfw.h
Breakout/src/Renderer/: renderer.cpp  resources.cpp  shader.cpp  shader.h
scripts/: build.sh  build_and_run.sh  run.sh
